--- a/src/page-main.html
+++ b/src/page-main.html
@@ -10,6 +10,7 @@
 
     <main class="page">
       @@include('html/page-main/_hero.html', {})
+      @@include('html/page-main/_paperwork.html', {})
     </main>
 
     @@include('html/components/_footer.html', {})
