added educational section

--- a/src/page-main.html
+++ b/src/page-main.html
@@ -11,6 +11,7 @@
     <main class="page">
       @@include('html/page-main/_hero.html', {})
       @@include('html/page-main/_paperwork.html', {})
+      @@include('html/page-main/_educational.html', {})
     </main>
 
     @@include('html/components/_footer.html', {})
