--- a/src/page-main.html
+++ b/src/page-main.html
@@ -6,12 +6,14 @@
 
 <body>
   <div class="wrapper">
+    @@include('html/_popup.html',{})
     @@include('html/components/_header.html', {})
 
     <main class="page">
       @@include('html/page-main/_hero.html', {})
       @@include('html/page-main/_paperwork.html', {})
       @@include('html/page-main/_educational.html', {})
+      @@include('html/page-main/_examples.html', {})
     </main>
 
     @@include('html/components/_footer.html', {})
