--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
             <a class="preview__link" href="page-contacts.html" target="_blank">page contacts</a>
          </li>
          <li class="preview__item">
-            <a class="preview__link" href="#" target="_blank"></a>
+          <a class="preview__link" href="page-certification.html" target="_blank">page certification</a>
          </li>
          <li class="preview__item">
             <a class="preview__link" href="#" target="_blank"></a>
