--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
           <a class="preview__link" href="page-certification.html" target="_blank">page certification</a>
          </li>
          <li class="preview__item">
-            <a class="preview__link" href="#" target="_blank"></a>
+            <a class="preview__link" href="page-news.html" target="_blank">page news</a>
          </li>
       </ul>
    </div>
