--- a/src/html/page-certification/_certificate.html
+++ b/src/html/page-certification/_certificate.html
@@ -45,7 +45,7 @@
             <input class="form-certificate__input input" id="address" name="address" type="text" placeholder="Адрес доставки готовых документов (город, адрес, номер телефона, ФИО)" autocomplete="off" required>
           </div>
           <div class="form-certificate__column">
-            <button class="form-certificate__btn btn" type="submit">Отправить заявку</button>
+            <button class="form-certificate__btn btn state" type="submit">Отправить заявку</button>
           </div>
         </div>
       </form>
