--- a/src/html/page-certification/_electrical-safety.html
+++ b/src/html/page-certification/_electrical-safety.html
@@ -24,7 +24,7 @@
                 </p>
               </div>
               <div class="banner-safery__block">
-                <a class="banner-safery__btn btn btn--accent" href="#">Заказать</a>
+                <a class="banner-safery__btn btn btn--accent state" href="#">Заказать</a>
               </div>
             </div>
           </div>
