--- a/src/html/page-main/_news-events.html
+++ b/src/html/page-main/_news-events.html
@@ -39,7 +39,7 @@
             })
         </div>
       </div>
-      <a class="news-events__link btn btn--transparent" href="#">ВСЕ НОВОСТИ</a>
+      <a class="news-events__link btn btn--transparent state" href="#">ВСЕ НОВОСТИ</a>
     </div>
   </div>
 </section>
