--- a/src/page-contacts.html
+++ b/src/page-contacts.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 @@include('html/components/_head.html', {
-"title" : "contacts page"
+"title" : "страница контактов"
 })
 
 <body>
   <div class="wrapper">
-    @@include('html/components/_header.html', {})
+    @@include('html/components/_header.html', {
+    "page": "secondary"
+    })
 
-    <main class="page">Я страница контактов</main>
+    <main class="page">
+      <div class="page__navigation">
+        <div class="container">
+          <nav class="page__breadcrumbs breadcrumbs">
+            <ul class="breadcrumbs__list">
+              <li class="breadcrumbs__item">
+                <a class="breadcrumbs__link" href="#">Главная</a>
+              </li>
+              <li class="breadcrumbs__item">
+                <span class="breadcrumbs__current">Контакты</span>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      @@include('html/page-contacts/_contacts.html', {})
+    </main>
 
     @@include('html/components/_footer.html', {})
   </div>
