--- a/src/html/page-main/_examples.html
+++ b/src/html/page-main/_examples.html
@@ -5,19 +5,19 @@
       <div class="examples__slider">
         <div class="examples__carousel carousel-examples f-carousel" id="myCarousel">
           <a class="carousel-examples__slide f-carousel__slide" data-fancybox="gallery" href="@img/examples/01@4x.jpg">
-            <img src="@img/examples/01.jpg" width="223" height="306" alt="Документ">
+            <img data-src="@img/examples/01.jpg" width="223" height="306" alt="Документ">
           </a>
           <a class="carousel-examples__slide f-carousel__slide" data-fancybox="gallery" href="@img/examples/02@4x.jpg">
-            <img src="@img/examples/02.jpg" width="223" height="306" alt="Документ">
+            <img data-src="@img/examples/02.jpg" width="223" height="306" alt="Документ">
           </a>
           <a class="carousel-examples__slide f-carousel__slide" data-fancybox="gallery" href="@img/examples/03@4x.jpg">
-            <img src="@img/examples/03.jpg" width="223" height="306" alt="Документ">
+            <img data-src="@img/examples/03.jpg" width="223" height="306" alt="Документ">
           </a>
           <a class="carousel-examples__slide f-carousel__slide" data-fancybox="gallery" href="@img/examples/04@4x.jpg">
-            <img src="@img/examples/04.jpg" width="223" height="306" alt="Документ">
+            <img data-src="@img/examples/04.jpg" width="223" height="306" alt="Документ">
           </a>
           <a class="carousel-examples__slide f-carousel__slide" data-fancybox="gallery" href="@img/examples/01@4x.jpg">
-            <img src="@img/examples/01.jpg" width="223" height="306" alt="Документ">
+            <img data-src="@img/examples/01.jpg" width="223" height="306" alt="Документ">
           </a>
         </div>
       </div>
