--- a/src/html/page-main/_hero.html
+++ b/src/html/page-main/_hero.html
@@ -9,6 +9,7 @@
         <a class="hero__btn btn btn--accent state" href="#">Заказать</a>
       </div>
       <div class="hero__decor" style="background-image: url('img/hero/group.png');"></div>
+      <!-- <div class="hero__decor"></div> -->
     </div>
   </div>
 </section>
